--- a/dapurputri/dapurputri.html
+++ b/dapurputri/dapurputri.html
@@ -3,66 +3,148 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Dapur Putri — Catering Homemade Premium</title>
-  <meta name="description" content="Dapur Putri — Catering rumahan premium, higienis, rapi dan konsisten. Pesan mudah via WhatsApp atau GoFood." />
+  <title>Dapur Putri — Professional Catering Service</title>
+  <meta name="description" content="Dapur Putri adalah layanan catering profesional dengan standar produksi higienis, sistem terkontrol, dan distribusi tepat waktu untuk kebutuhan korporat dan acara keluarga." />
   <link rel="stylesheet" href="/dapurputri/assets/dapurputri.css" />
 </head>
 
 <body>
 
-<!-- TOPBAR -->
 <header class="topbar">
   <div class="container topbar-inner">
     <div class="brand">
       <img src="/dapurputri/assets/dapurputrilogo.png" alt="Logo">
       <div>
         <strong>Dapur Putri</strong>
-        <small>Homemade • Premium • Higienis</small>
+        <small>Professional Catering Service</small>
       </div>
     </div>
 
     <nav class="desktop-nav">
+      <a href="#tentang">Tentang</a>
+      <a href="#layanan">Layanan</a>
       <a href="#paket">Paket</a>
-      <a href="#menu">Menu</a>
-      <a href="#cara">Cara Pesan</a>
-      <a href="#gofood">GoFood</a>
+      <a href="#kontak">Kontak</a>
     </nav>
 
-    <a class="btn btn-primary" href="https://wa.me/6285186660020" target="_blank">Pesan</a>
+    <a class="btn btn-primary" href="https://wa.me/6285186660020" target="_blank">
+      Konsultasi
+    </a>
   </div>
 </header>
 
 <!-- HERO -->
-<section class="hero">
+<section class="hero premium">
   <div class="container hero-wrap">
 
     <div class="hero-left">
-      <h1>Catering Rumahan<br>Dengan Standar Premium</h1>
+      <h1>
+        Catering Profesional<br>
+        dengan Standar Produksi Terstruktur
+      </h1>
+
       <p>
-        Porsi jelas, rasa konsisten, pengemasan rapi.
-        Cocok untuk kantor, keluarga, dan kebutuhan acara.
+        Dapur Putri menyediakan layanan catering untuk perusahaan,
+        instansi, dan acara keluarga dengan sistem produksi higienis,
+        rasa konsisten, serta distribusi tepat waktu.
       </p>
 
       <div class="hero-cta">
-        <a class="btn btn-whatsapp" href="https://wa.me/6285186660020" target="_blank">WhatsApp</a>
-        <a class="btn" href="#menu">Lihat Menu</a>
-        <a class="btn btn-secondary" href="bawang.html">Halaman Bawang</a>
+        <a class="btn btn-primary" href="#layanan">Lihat Layanan</a>
+        <a class="btn btn-secondary" href="bawang.html">Produk Bawang</a>
       </div>
 
-      <div class="hero-trust">
-        <div>✔ Higienis</div>
-        <div>✔ Respon Cepat</div>
-        <div>✔ Bisa Custom</div>
+      <div class="hero-meta">
+        <div>Produksi Harian Terkontrol</div>
+        <div>Minimal 10 Box</div>
+        <div>Custom Menu Tersedia</div>
       </div>
     </div>
 
     <div class="hero-card">
-      <img src="/dapurputri/assets/dapurputrilogo.png" alt="Logo">
-      <h3>Informasi Pemesanan</h3>
-      <p>Minimal 10 box / hari. Ongkir mengikuti tarif aplikasi.</p>
-      <a class="btn btn-whatsapp full" href="https://wa.me/6285186660020" target="_blank">Order Sekarang</a>
+      <h3>Konsultasi Kebutuhan Catering</h3>
+      <p>
+        Sampaikan jumlah tamu, jenis acara, dan preferensi menu.
+        Tim kami akan memberikan rekomendasi paket serta estimasi anggaran
+        secara transparan.
+      </p>
+      <a class="btn btn-whatsapp full"
+         href="https://wa.me/6285186660020"
+         target="_blank">
+        Hubungi Sekarang
+      </a>
     </div>
 
+  </div>
+</section>
+
+<!-- TENTANG -->
+<section id="tentang" class="section">
+  <div class="container narrow">
+    <h2>Tentang Dapur Putri</h2>
+
+    <p>
+      Dapur Putri adalah penyedia layanan catering yang berfokus pada
+      konsistensi rasa, kualitas bahan baku, serta ketepatan distribusi.
+      Kami memahami bahwa dalam konteks acara formal maupun korporat,
+      konsumsi mencerminkan profesionalisme penyelenggara.
+    </p>
+
+    <p>
+      Oleh karena itu, setiap proses produksi dilakukan melalui tahapan
+      terstruktur mulai dari seleksi bahan, pengolahan, pengemasan,
+      hingga verifikasi akhir sebelum pengiriman.
+    </p>
+  </div>
+</section>
+
+<!-- LAYANAN -->
+<section id="layanan" class="section alt">
+  <div class="container">
+    <h2>Layanan Catering</h2>
+
+    <div class="grid">
+
+      <div class="card premium-card">
+        <h4>Catering Korporat</h4>
+        <p>
+          Untuk meeting, seminar, pelatihan, dan acara perusahaan.
+          Disiapkan dengan kemasan rapi dan porsi terukur.
+        </p>
+        <ul>
+          <li>Menu Nusantara & Modern</li>
+          <li>Estimasi Anggaran Transparan</li>
+          <li>Pengiriman Tepat Waktu</li>
+        </ul>
+      </div>
+
+      <div class="card premium-card">
+        <h4>Catering Event & Keluarga</h4>
+        <p>
+          Cocok untuk pernikahan, pengajian, ulang tahun,
+          dan acara keluarga besar.
+        </p>
+        <ul>
+          <li>Menu Custom</li>
+          <li>Penyesuaian Porsi</li>
+          <li>Standar Kebersihan Terjaga</li>
+        </ul>
+      </div>
+
+      <div class="card premium-card">
+        <h4>Paket Harian</h4>
+        <p>
+          Solusi catering rutin untuk kantor atau kebutuhan
+          konsumsi harian dalam jumlah tertentu.
+        </p>
+        <ul>
+          <li>Minimal 10 Box</li>
+          <li>Rotasi Menu Mingguan</li>
+          <li>Harga Kompetitif</li>
+        </ul>
+      </div>
+
+    </div>
   </div>
 </section>
 
@@ -70,74 +152,53 @@
 <section id="paket" class="section">
   <div class="container">
     <div class="section-head">
-      <h2>Paket Catering 7 Hari</h2>
-      <button id="copyBtn" class="btn-small">Salin Paket</button>
+      <h2>Rotasi Menu 7 Hari</h2>
+      <button id="copyBtn" class="btn-small">Salin Rincian</button>
     </div>
+
     <div id="paketGrid" class="grid"></div>
+
+    <p class="note">
+      Harga dapat disesuaikan berdasarkan jumlah pesanan
+      dan spesifikasi menu tambahan.
+    </p>
   </div>
 </section>
 
-<!-- MENU -->
-<section id="menu" class="section alt">
-  <div class="container">
-    <h2>Menu Favorit</h2>
-    <div class="grid">
-      <div class="card">
-        <h4>Nasi Ayam Geprek</h4>
-        <p>Pedas mantap, porsi rapi.</p>
-        <a class="btn-small" href="https://wa.me/6285186660020">Order</a>
-      </div>
+<!-- KONTAK -->
+<section id="kontak" class="section alt">
+  <div class="container center narrow">
+    <h2>Diskusikan Kebutuhan Catering Anda</h2>
+    <p>
+      Untuk konsultasi menu, estimasi jumlah tamu,
+      atau permintaan penawaran resmi, silakan hubungi kami.
+    </p>
 
-      <div class="card">
-        <h4>Nasi Ayam Bakar</h4>
-        <p>Bumbu meresap, cocok keluarga.</p>
-        <a class="btn-small" href="https://wa.me/6285186660020">Order</a>
-      </div>
-
-      <div class="card">
-        <h4>Nasi Rendang</h4>
-        <p>Gurih dan konsisten.</p>
-        <a class="btn-small" href="https://wa.me/6285186660020">Order</a>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- CARA -->
-<section id="cara" class="section">
-  <div class="container">
-    <h2>Cara Pesan</h2>
-    <ol>
-      <li>Hubungi WhatsApp</li>
-      <li>Sebutkan tanggal & jumlah</li>
-      <li>Konfirmasi alamat & pembayaran</li>
-    </ol>
-  </div>
-</section>
-
-<!-- GOFOOD -->
-<section id="gofood" class="section alt">
-  <div class="container center">
-    <h2>Pesan via GoFood</h2>
-    <a class="btn btn-primary" href="https://gofood.link/a/KHS6rGQ" target="_blank">Buka GoFood</a>
+    <a class="btn btn-primary"
+       href="https://wa.me/6285186660020"
+       target="_blank">
+      WhatsApp Konsultasi
+    </a>
   </div>
 </section>
 
 <footer>
   <div class="container">
-    © <span id="year"></span> Dapur Putri
+    © <span id="year"></span> Dapur Putri — Professional Catering Service
   </div>
 </footer>
 
-<!-- FLOATING WHATSAPP -->
-<a href="https://wa.me/6285186660020" class="floating-wa" target="_blank">WA</a>
+<a href="https://wa.me/6285186660020"
+   class="floating-wa"
+   target="_blank">
+   WhatsApp
+</a>
 
-<!-- MOBILE NAV -->
 <div class="bottom-nav">
+  <a data-target="tentang">🏢</a>
+  <a data-target="layanan">📋</a>
   <a data-target="paket">📦</a>
-  <a data-target="menu">🍽️</a>
-  <a data-target="cara">📝</a>
-  <a data-target="gofood">📲</a>
+  <a data-target="kontak">📲</a>
 </div>
 
 <script src="/dapurputri/assets/dapurputri.js"></script>
