--- a/dapurputri/dapurputri.html
+++ b/dapurputri/dapurputri.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dapur Putri — Professional Catering Service</title>
-  <meta name="description" content="Dapur Putri adalah layanan catering profesional dengan standar produksi higienis, sistem terkontrol, dan distribusi tepat waktu untuk kebutuhan korporat dan acara keluarga." />
+  <meta name="description" content="Layanan catering profesional dengan standar rasa, higienitas, dan ketepatan distribusi untuk kebutuhan korporat dan keluarga." />
   <link rel="stylesheet" href="/dapurputri/assets/dapurputri.css" />
 </head>
 
@@ -24,123 +24,86 @@
       <a href="#tentang">Tentang</a>
       <a href="#layanan">Layanan</a>
       <a href="#paket">Paket</a>
+      <a href="#menu">Menu</a>
       <a href="#kontak">Kontak</a>
     </nav>
 
-    <a class="btn btn-primary" href="https://wa.me/6285186660020" target="_blank">
-      Konsultasi
-    </a>
+    <a class="btn btn-primary" href="https://wa.me/6285186660020" target="_blank">Konsultasi</a>
   </div>
 </header>
 
-<!-- HERO -->
-<section class="hero premium">
+<section class="hero">
   <div class="container hero-wrap">
 
     <div class="hero-left">
-      <h1>
-        Catering Profesional<br>
-        dengan Standar Produksi Terstruktur
-      </h1>
-
+      <h1>Layanan Catering Profesional<br>Dengan Standar Produksi Terukur</h1>
       <p>
-        Dapur Putri menyediakan layanan catering untuk perusahaan,
-        instansi, dan acara keluarga dengan sistem produksi higienis,
-        rasa konsisten, serta distribusi tepat waktu.
+        Dapur Putri menghadirkan layanan catering yang dirancang untuk kebutuhan korporat,
+        institusi, dan acara keluarga formal dengan sistem produksi yang konsisten,
+        higienis, dan tepat waktu.
       </p>
 
       <div class="hero-cta">
-        <a class="btn btn-primary" href="#layanan">Lihat Layanan</a>
+        <a class="btn btn-primary" href="https://wa.me/6285186660020" target="_blank">Diskusikan Kebutuhan</a>
+        <a class="btn" href="#paket">Lihat Paket</a>
         <a class="btn btn-secondary" href="bawang.html">Produk Bawang</a>
       </div>
 
-      <div class="hero-meta">
-        <div>Produksi Harian Terkontrol</div>
-        <div>Minimal 10 Box</div>
-        <div>Custom Menu Tersedia</div>
+      <div class="hero-trust">
+        <div>✔ Sistem Produksi Konsisten</div>
+        <div>✔ Higienis & Terstandar</div>
+        <div>✔ Distribusi Tepat Waktu</div>
       </div>
-    </div>
-
-    <div class="hero-card">
-      <h3>Konsultasi Kebutuhan Catering</h3>
-      <p>
-        Sampaikan jumlah tamu, jenis acara, dan preferensi menu.
-        Tim kami akan memberikan rekomendasi paket serta estimasi anggaran
-        secara transparan.
-      </p>
-      <a class="btn btn-whatsapp full"
-         href="https://wa.me/6285186660020"
-         target="_blank">
-        Hubungi Sekarang
-      </a>
     </div>
 
   </div>
 </section>
 
-<!-- TENTANG -->
-<section id="tentang" class="section">
+<section id="tentang" class="section alt">
   <div class="container narrow">
     <h2>Tentang Dapur Putri</h2>
-
     <p>
-      Dapur Putri adalah penyedia layanan catering yang berfokus pada
-      konsistensi rasa, kualitas bahan baku, serta ketepatan distribusi.
-      Kami memahami bahwa dalam konteks acara formal maupun korporat,
-      konsumsi mencerminkan profesionalisme penyelenggara.
+      Dapur Putri adalah penyedia layanan catering yang berfokus pada kualitas rasa,
+      konsistensi produksi, serta profesionalisme distribusi. Kami memahami bahwa dalam
+      acara formal maupun kegiatan korporat, makanan merupakan bagian dari representasi
+      kualitas penyelenggara.
     </p>
-
     <p>
-      Oleh karena itu, setiap proses produksi dilakukan melalui tahapan
-      terstruktur mulai dari seleksi bahan, pengolahan, pengemasan,
-      hingga verifikasi akhir sebelum pengiriman.
+      Setiap pesanan diproduksi berdasarkan standar resep tetap, kontrol kebersihan dapur,
+      serta verifikasi akhir sebelum pengiriman untuk memastikan stabilitas rasa dan
+      ketepatan jumlah.
     </p>
   </div>
 </section>
 
-<!-- LAYANAN -->
-<section id="layanan" class="section alt">
+<section id="layanan" class="section">
   <div class="container">
-    <h2>Layanan Catering</h2>
+    <h2>Layanan Kami</h2>
+    <div class="grid-2">
 
-    <div class="grid">
-
-      <div class="card premium-card">
+      <div class="card">
         <h4>Catering Korporat</h4>
         <p>
-          Untuk meeting, seminar, pelatihan, dan acara perusahaan.
-          Disiapkan dengan kemasan rapi dan porsi terukur.
+          Untuk meeting, seminar, pelatihan, dan kegiatan perusahaan.
+          Disiapkan dengan kemasan rapi dan presentasi profesional.
         </p>
         <ul>
-          <li>Menu Nusantara & Modern</li>
-          <li>Estimasi Anggaran Transparan</li>
-          <li>Pengiriman Tepat Waktu</li>
+          <li>Menu variatif</li>
+          <li>Estimasi biaya transparan</li>
+          <li>Penjadwalan terstruktur</li>
         </ul>
       </div>
 
-      <div class="card premium-card">
+      <div class="card">
         <h4>Catering Event & Keluarga</h4>
         <p>
-          Cocok untuk pernikahan, pengajian, ulang tahun,
-          dan acara keluarga besar.
+          Untuk acara keluarga, syukuran, dan pertemuan formal.
+          Dapat disesuaikan dengan preferensi tamu dan kebutuhan acara.
         </p>
         <ul>
-          <li>Menu Custom</li>
-          <li>Penyesuaian Porsi</li>
-          <li>Standar Kebersihan Terjaga</li>
-        </ul>
-      </div>
-
-      <div class="card premium-card">
-        <h4>Paket Harian</h4>
-        <p>
-          Solusi catering rutin untuk kantor atau kebutuhan
-          konsumsi harian dalam jumlah tertentu.
-        </p>
-        <ul>
-          <li>Minimal 10 Box</li>
-          <li>Rotasi Menu Mingguan</li>
-          <li>Harga Kompetitif</li>
+          <li>Menu dapat dikustomisasi</li>
+          <li>Penyesuaian porsi</li>
+          <li>Koordinasi sebelum hari H</li>
         </ul>
       </div>
 
@@ -148,36 +111,59 @@
   </div>
 </section>
 
-<!-- PAKET -->
-<section id="paket" class="section">
+<section id="paket" class="section alt">
   <div class="container">
-    <div class="section-head">
-      <h2>Rotasi Menu 7 Hari</h2>
-      <button id="copyBtn" class="btn-small">Salin Rincian</button>
-    </div>
-
-    <div id="paketGrid" class="grid"></div>
-
-    <p class="note">
-      Harga dapat disesuaikan berdasarkan jumlah pesanan
-      dan spesifikasi menu tambahan.
+    <h2>Paket Catering 7 Hari</h2>
+    <p class="section-desc">
+      Dirancang untuk kebutuhan konsumsi rutin kantor atau keluarga
+      dengan menu bergantian dan harga terstruktur.
     </p>
+    <div id="paketGrid" class="grid"></div>
   </div>
 </section>
 
-<!-- KONTAK -->
-<section id="kontak" class="section alt">
-  <div class="container center narrow">
-    <h2>Diskusikan Kebutuhan Catering Anda</h2>
-    <p>
-      Untuk konsultasi menu, estimasi jumlah tamu,
-      atau permintaan penawaran resmi, silakan hubungi kami.
-    </p>
+<section id="menu" class="section">
+  <div class="container">
+    <h2>Menu Signature</h2>
+    <div class="grid">
 
-    <a class="btn btn-primary"
-       href="https://wa.me/6285186660020"
-       target="_blank">
-      WhatsApp Konsultasi
+      <div class="card">
+        <h4>Ayam Bakar Signature</h4>
+        <p>
+          Dimarinasi dengan komposisi bumbu terukur,
+          dipanggang hingga mencapai tekstur dan aroma optimal.
+        </p>
+      </div>
+
+      <div class="card">
+        <h4>Nasi Box Corporate</h4>
+        <p>
+          Paket lengkap dengan lauk utama premium,
+          sayur pendamping, dan kemasan representatif.
+        </p>
+      </div>
+
+      <div class="card">
+        <h4>Rendang Ayam Premium</h4>
+        <p>
+          Diproses perlahan dengan teknik pemasakan
+          untuk menjaga kelembutan dan konsistensi rasa.
+        </p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<section id="kontak" class="section alt center">
+  <div class="container narrow">
+    <h2>Konsultasi & Pemesanan</h2>
+    <p>
+      Untuk mendapatkan rekomendasi paket dan estimasi biaya,
+      silakan hubungi tim kami melalui WhatsApp.
+    </p>
+    <a class="btn btn-primary" href="https://wa.me/6285186660020" target="_blank">
+      Hubungi Sekarang
     </a>
   </div>
 </section>
@@ -188,16 +174,13 @@
   </div>
 </footer>
 
-<a href="https://wa.me/6285186660020"
-   class="floating-wa"
-   target="_blank">
-   WhatsApp
-</a>
+<a href="https://wa.me/6285186660020" class="floating-wa" target="_blank">WA</a>
 
 <div class="bottom-nav">
   <a data-target="tentang">🏢</a>
   <a data-target="layanan">📋</a>
   <a data-target="paket">📦</a>
+  <a data-target="menu">🍽️</a>
   <a data-target="kontak">📲</a>
 </div>
 
