--- a/dapurputri/dapurputri.html
+++ b/dapurputri/dapurputri.html
@@ -159,14 +159,26 @@
   <div class="container narrow">
     <h2>Konsultasi & Pemesanan</h2>
     <p>
-      Untuk mendapatkan rekomendasi paket dan estimasi biaya,
-      silakan hubungi tim kami melalui WhatsApp.
+      Untuk pemesanan langsung atau melihat ulasan pelanggan,
+      Anda dapat memilih salah satu kanal resmi kami.
     </p>
-    <a class="btn btn-primary" href="https://wa.me/6285186660020" target="_blank">
-      Hubungi Sekarang
-    </a>
+
+    <div class="cta-group">
+      <a class="btn btn-primary" 
+         href="https://wa.me/6285186660020" 
+         target="_blank">
+         Konsultasi via WhatsApp
+      </a>
+
+      <a class="btn btn-secondary" 
+         href="https://gofood.link/a/KHS6rGQ" 
+         target="_blank">
+         Pesan via GoFood
+      </a>
+    </div>
   </div>
 </section>
+
 
 <footer>
   <div class="container">
