--- a/dapurputri/bawang.html
+++ b/dapurputri/bawang.html
@@ -3,70 +3,126 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Bawang Goreng & Iris — Dapur Putri</title>
-  <meta name="description" content="Bawang goreng premium dan bawang iris mentah siap goreng dari Dapur Putri." />
-
+  <title>Bawang Premium — Dapur Putri</title>
+  <meta name="description" content="Bawang goreng premium dan bawang iris mentah higienis dengan kualitas stabil untuk kebutuhan rumah tangga maupun usaha kuliner." />
   <link rel="stylesheet" href="assets/bawang.css" />
 </head>
 
 <body>
 
-<header class="header">
-  <div class="container header-inner">
+<header class="topbar">
+  <div class="container topbar-inner">
     <div class="brand">
-      <img src="assets/dapurputrilogo.png" alt="Dapur Putri">
+      <img src="assets/dapurputrilogo.png" alt="Logo">
       <div>
         <strong>Dapur Putri</strong>
-        <span>Bawang Premium</span>
+        <small>Produk Bawang Premium</small>
       </div>
     </div>
 
+    <nav class="desktop-nav">
+      <a href="#tentang">Tentang</a>
+      <a href="#goreng">Bawang Goreng</a>
+      <a href="#mentah">Bawang Iris</a>
+      <a href="#kontak">Kontak</a>
+    </nav>
+
     <a class="btn btn-primary"
-       href="https://wa.me/6285186660020?text=Halo%20Dapur%20Putri,%20saya%20ingin%20pesan%20produk%20bawang."
+       href="https://wa.me/6285186660020?text=Halo%20Dapur%20Putri,%20saya%20ingin%20konsultasi%20produk%20bawang."
        target="_blank">
-      Order Sekarang
+      Konsultasi
     </a>
   </div>
 </header>
 
-<main class="container">
+<section class="hero">
+  <div class="container hero-wrap">
+    <h1>Bawang Berkualitas<br>Untuk Standar Produksi Profesional</h1>
+    <p>
+      Diproses higienis, dikemas rapi, dan dijaga konsistensinya.
+      Cocok untuk rumah tangga maupun usaha kuliner yang membutuhkan
+      bahan baku stabil dan terpercaya.
+    </p>
+  </div>
+</section>
 
-  <section class="intro">
-    <h1>Bawang Goreng & Iris Mentah</h1>
-    <p>Produk higienis, renyah, dan siap kirim. Tersedia kemasan plastik dan toples.</p>
-  </section>
+<section id="tentang" class="section alt">
+  <div class="container narrow">
+    <h2>Standar Produk</h2>
+    <p>
+      Produk bawang Dapur Putri diproses dengan kontrol kebersihan
+      dan seleksi bahan baku yang ketat. Setiap batch diperiksa
+      sebelum pengemasan untuk menjaga kualitas aroma, warna, dan tekstur.
+    </p>
+    <p>
+      Kami memahami bahwa stabilitas bahan baku memengaruhi hasil akhir
+      masakan. Karena itu, konsistensi adalah prioritas utama.
+    </p>
+  </div>
+</section>
 
-  <section>
-    <h2>Bawang Goreng</h2>
-    <div id="gorengGrid" class="product-grid"></div>
-  </section>
+<section id="goreng" class="section">
+  <div class="container">
+    <h2>Bawang Goreng Premium</h2>
+    <p class="section-desc">
+      Renyah, tidak berminyak berlebihan, dan memiliki aroma stabil.
+      Cocok untuk topping maupun kebutuhan produksi makanan.
+    </p>
+    <div id="gorengGrid" class="grid"></div>
+  </div>
+</section>
 
-  <section>
+<section id="mentah" class="section alt">
+  <div class="container">
     <h2>Bawang Iris Mentah</h2>
-    <div id="mentahGrid" class="product-grid"></div>
-  </section>
+    <p class="section-desc">
+      Siap goreng, irisan seragam, dan dikemas higienis.
+      Efisien untuk usaha kuliner skala kecil hingga menengah.
+    </p>
+    <div id="mentahGrid" class="grid"></div>
+  </div>
+</section>
 
-</main>
+<section id="kontak" class="section center">
+  <div class="container narrow">
+    <h2>Pemesanan & Informasi</h2>
+    <p>
+      Untuk pemesanan partai kecil maupun besar,
+      silakan hubungi kami melalui WhatsApp atau email resmi.
+    </p>
+    <div class="cta-group">
+      <a class="btn btn-primary"
+         href="https://wa.me/6285186660020"
+         target="_blank">
+         WhatsApp
+      </a>
 
-<footer class="footer">
-  <div class="container footer-inner">
-    <div>
-      <strong>Dapur Putri</strong>
-      <small>WhatsApp: +62 851-8666-0020</small>
-      <small>Email: rahmadanip88@gmail.com</small>
+      <a class="btn btn-secondary"
+         href="mailto:rahmadanip88@gmail.com"
+         target="_blank">
+         Email
+      </a>
     </div>
+  </div>
+</section>
 
-    <small>© <span id="year"></span> Dapur Putri</small>
+<footer>
+  <div class="container">
+    © <span id="year"></span> Dapur Putri — Produk Bawang Premium
   </div>
 </footer>
 
-<script src="assets/bawang.js"></script>
-  <div class="bottom-nav">
-  <a href="#menu"><span>🍽️</span>Menu Favorit</a>
-  <a href="#paket"><span>📦</span>Paket Catering</a>
-  <a href="#cara"><span>📝</span>Cara Pesan</a>
-  <a href="#kontak"><span>📲</span>Kontak / Order</a>
+<a href="https://wa.me/6285186660020"
+   class="floating-wa"
+   target="_blank">WA</a>
+
+<div class="bottom-nav">
+  <a data-target="tentang">🏢</a>
+  <a data-target="goreng">🧅</a>
+  <a data-target="mentah">📦</a>
+  <a data-target="kontak">📲</a>
 </div>
 
+<script src="assets/bawang.js"></script>
 </body>
 </html>
