--- a/dapurputri/bawang.html
+++ b/dapurputri/bawang.html
@@ -1,128 +1,118 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Bawang Premium — Dapur Putri</title>
-  <meta name="description" content="Bawang goreng premium dan bawang iris mentah higienis dengan kualitas stabil untuk kebutuhan rumah tangga maupun usaha kuliner." />
-  <link rel="stylesheet" href="assets/bawang.css" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Bawang Goreng Premium | Dapur Putri</title>
+<link rel="stylesheet" href="dapurputri.css">
 </head>
-
 <body>
 
-<header class="topbar">
-  <div class="container topbar-inner">
-    <div class="brand">
-      <img src="assets/dapurputrilogo.png" alt="Logo">
-      <div>
-        <strong>Dapur Putri</strong>
-        <small>Produk Bawang Premium</small>
-      </div>
+<header class="navbar">
+  <div class="container nav-container">
+    <div class="logo">
+      <a href="dapurputri.html">DAPUR PUTRI</a>
     </div>
 
-    <nav class="desktop-nav">
-      <a href="#tentang">Tentang</a>
-      <a href="#goreng">Bawang Goreng</a>
-      <a href="#mentah">Bawang Iris</a>
-      <a href="#kontak">Kontak</a>
-    </nav>
+    <ul class="nav-links">
+      <li><a href="dapurputri.html">Beranda</a></li>
+      <li><a href="#tentang">Tentang</a></li>
+      <li><a href="#keunggulan">Keunggulan</a></li>
+      <li><a href="#kontak">Pesan</a></li>
+    </ul>
 
-    <a class="btn btn-primary"
-       href="https://wa.me/6285186660020?text=Halo%20Dapur%20Putri,%20saya%20ingin%20konsultasi%20produk%20bawang."
-       target="_blank">
-      Konsultasi
-    </a>
+    <div class="menu-toggle" id="mobile-menu">
+      ☰
+    </div>
   </div>
 </header>
 
 <section class="hero">
-  <div class="container hero-wrap">
-    <h1>Bawang Berkualitas<br>Untuk Standar Produksi Profesional</h1>
+  <div class="container center">
+    <h1>Bawang Goreng Premium</h1>
     <p>
-      Diproses higienis, dikemas rapi, dan dijaga konsistensinya.
-      Cocok untuk rumah tangga maupun usaha kuliner yang membutuhkan
-      bahan baku stabil dan terpercaya.
+      Renyah alami, tanpa pahit, dan diproduksi dengan standar kebersihan tinggi.
+      Pelengkap sempurna untuk nasi box, catering, maupun kebutuhan retail.
     </p>
+    <div class="cta-group">
+      <a class="btn btn-primary" href="#kontak">Pesan Sekarang</a>
+      <a class="btn btn-secondary" href="dapurputri.html">Kembali ke Beranda</a>
+    </div>
   </div>
 </section>
 
-<section id="tentang" class="section alt">
+<section id="tentang" class="section">
   <div class="container narrow">
-    <h2>Standar Produk</h2>
+    <h2>Diproduksi Secara Selektif</h2>
     <p>
-      Produk bawang Dapur Putri diproses dengan kontrol kebersihan
-      dan seleksi bahan baku yang ketat. Setiap batch diperiksa
-      sebelum pengemasan untuk menjaga kualitas aroma, warna, dan tekstur.
+      Bawang goreng kami menggunakan bawang pilihan dengan kadar air optimal
+      sehingga menghasilkan tekstur renyah konsisten. Proses penggorengan
+      dilakukan dengan suhu terkontrol untuk menjaga warna keemasan alami
+      serta meminimalkan rasa pahit.
     </p>
     <p>
-      Kami memahami bahwa stabilitas bahan baku memengaruhi hasil akhir
-      masakan. Karena itu, konsistensi adalah prioritas utama.
+      Setiap batch diproduksi dalam jumlah terkontrol untuk menjaga kualitas,
+      bukan produksi massal tanpa kontrol mutu.
     </p>
   </div>
 </section>
 
-<section id="goreng" class="section">
+<section id="keunggulan" class="section alt">
   <div class="container">
-    <h2>Bawang Goreng Premium</h2>
-    <p class="section-desc">
-      Renyah, tidak berminyak berlebihan, dan memiliki aroma stabil.
-      Cocok untuk topping maupun kebutuhan produksi makanan.
-    </p>
-    <div id="gorengGrid" class="grid"></div>
-  </div>
-</section>
-
-<section id="mentah" class="section alt">
-  <div class="container">
-    <h2>Bawang Iris Mentah</h2>
-    <p class="section-desc">
-      Siap goreng, irisan seragam, dan dikemas higienis.
-      Efisien untuk usaha kuliner skala kecil hingga menengah.
-    </p>
-    <div id="mentahGrid" class="grid"></div>
+    <h2>Keunggulan Produk</h2>
+    <div class="grid-3">
+      <div class="card">
+        <h3>Renyah Tahan Lama</h3>
+        <p>
+          Dikemas dengan teknik yang menjaga kerenyahan tanpa bahan pengawet.
+        </p>
+      </div>
+      <div class="card">
+        <h3>Aroma Alami</h3>
+        <p>
+          Tanpa campuran tepung berlebih sehingga aroma bawang tetap dominan.
+        </p>
+      </div>
+      <div class="card">
+        <h3>Cocok untuk Catering</h3>
+        <p>
+          Ideal untuk nasi box, prasmanan, dan kebutuhan dapur profesional.
+        </p>
+      </div>
+    </div>
   </div>
 </section>
 
 <section id="kontak" class="section center">
   <div class="container narrow">
-    <h2>Pemesanan & Informasi</h2>
+    <h2>Pemesanan & Distribusi</h2>
     <p>
-      Untuk pemesanan partai kecil maupun besar,
-      silakan hubungi kami melalui WhatsApp atau email resmi.
+      Tersedia untuk pembelian retail maupun partai besar untuk kebutuhan
+      usaha catering dan restoran.
     </p>
+
     <div class="cta-group">
       <a class="btn btn-primary"
          href="https://wa.me/6285186660020"
          target="_blank">
-         WhatsApp
+         Pesan via WhatsApp
       </a>
 
       <a class="btn btn-secondary"
-         href="mailto:rahmadanip88@gmail.com"
+         href="https://gofood.link/a/KHS6rGQ"
          target="_blank">
-         Email
+         Pesan via GoFood
       </a>
     </div>
   </div>
 </section>
 
-<footer>
-  <div class="container">
-    © <span id="year"></span> Dapur Putri — Produk Bawang Premium
+<footer class="footer">
+  <div class="container center">
+    <p>© 2025 Dapur Putri. Produk berkualitas untuk kebutuhan premium.</p>
   </div>
 </footer>
 
-<a href="https://wa.me/6285186660020"
-   class="floating-wa"
-   target="_blank">WA</a>
-
-<div class="bottom-nav">
-  <a data-target="tentang">🏢</a>
-  <a data-target="goreng">🧅</a>
-  <a data-target="mentah">📦</a>
-  <a data-target="kontak">📲</a>
-</div>
-
-<script src="assets/bawang.js"></script>
+<script src="dapurputri.js"></script>
 </body>
 </html>
