--- a/dapurputri/bawang.html
+++ b/dapurputri/bawang.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Bawang Goreng Premium | Dapur Putri</title>
-<link rel="stylesheet" href="/dapurputri/assets/bawang.css">
+<link rel="stylesheet" href="assets/bawang.css">
+
 </head>
 <body>
 
